--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 canvas 
 {
-    box-shadow: 5px 8px 5px lightgreen;
+    box-shadow: 5px 8px 5px aquamarine;
     border-radius:15px;
     border-width: 7px;
 
+}
+
+body{
+    background-size: cover;
 }
